updated readme . removed old email template

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "simpleauth",
   "version": "1.0.0",
   "description": "simple service for user auth",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node app"
   },
   "repository": {
     "type": "git",
