--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://gitlab.com/identity9aks/simpleauth#readme",
   "dependencies": {
+    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "fastify": "^3.20.2",
     "fastify-cors": "^6.0.2",
+    "fastify-oauth2": "^4.2.3",
     "fastify-swagger": "^4.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
