--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
     "mustache": "^4.2.0",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.6.3"
   }
 }
