--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "fastify": "^3.20.2",
+    "fastify-cookie": "^5.3.1",
     "fastify-cors": "^6.0.2",
+    "fastify-helmet": "^5.3.2",
     "fastify-swagger": "^4.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
