Require different key for signing refresh token

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ MONGO_URI =
 ENVIRONMENT =                      
 CHECK_ADMIN =             
 REFRESH_RESPONSE =                         
-JWT_KEY =                        
+JWT_KEY =     
+REFRESH_KEY =                   
 PORT =                                
 ALLOW_CORS_ORIGIN =                   
 DISABLE_MAIL =                     
