--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"fastify-cookie": "^5.3.1",
 		"fastify-cors": "^6.0.2",
 		"fastify-helmet": "^5.3.2",
+		"fastify-rate-limit": "^5.7.0",
 		"fastify-swagger": "^4.9.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.1",
