Add passwordless email login

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ APP_NAME =
 APP_DOMAIN =                           
 APP_CONFIRM_EMAIL_REDIRECT =
 APP_RESET_PASSWORD_REDIRECT =
+APP_LOGIN_WTH_EMAIL_REDIRECT =
 GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET =
 GOOGLE_REDIRECT_URI =
