--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	},
 	"devDependencies": {},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node app"
 	},
 	"repository": {
 		"type": "git",
